<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context=".mvp.presentation.sign_in.SignInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/app_background" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <TextView
                android:id="@+id/sign_in_title"
                android:gravity="center"
                android:text="@string/sign_in_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/TopLevelTitleStyle"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp"/>
        <TextView
                android:id="@+id/sign_in_email_text_view"
                android:text="@string/sign_in_email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_title"
                style="@style/MiddleLevelTitleStyle"
                android:layout_marginStart="32dp" android:layout_marginTop="16dp"/>
        <EditText
                android:id="@+id/sign_in_email_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_email_text_view"
                style="@style/TextEditStyle" android:importantForAutofill="no"
                android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>
        <TextView
                android:id="@+id/sign_in_password_text_view"
                android:text="@string/sign_in_password_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/MiddleLevelTitleStyle"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_email_edit_text"
                android:layout_marginTop="32dp" android:layout_marginStart="32dp"/>
        <EditText
                android:id="@+id/sign_in_password_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_password_text_view"
                style="@style/TextEditStyle" android:importantForAutofill="no"
                android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>
        <Button
                android:id="@+id/sign_in_button"
                android:text="@string/sign_in_title"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_password_edit_text"
                style="@style/ButtonStyle" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
                android:layout_height="wrap_content" android:layout_marginTop="32dp"/>
        <TextView
                android:id="@+id/sign_in_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/sign_in_forgot_password"
                style="@style/LowLevelTitleStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="32dp" android:layout_marginBottom="32dp" android:layout_marginTop="32dp"/>
        <TextView
                android:id="@+id/sign_in_register"
                android:text="@string/sign_in_register_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
                style="@style/LowLevelTitleStyle"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="32dp" android:layout_marginEnd="32dp" android:layout_marginTop="32dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>