<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context=".mvp.presentation.sign_up.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/app_background" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <TextView
                android:id="@+id/sign_up_title"
                android:text="@string/sign_up_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/TopLevelTitleStyle"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="32dp" android:layout_marginStart="32dp"/>
        <TextView
                android:id="@+id/sign_up_email_text_view"
                android:text="@string/sign_up_email_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/MiddleLevelTitleStyle"
                android:layout_marginStart="32dp" app:layout_constraintTop_toBottomOf="@+id/sign_up_name_edit_text"
                android:layout_marginTop="32dp"/>
        <EditText
                android:id="@+id/sign_up_email_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_email_text_view"
                style="@style/TextEditStyle" android:importantForAutofill="no"
                android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>
        <TextView
                android:id="@+id/sign_up_password_text_view"
                android:text="@string/sign_up_password_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/MiddleLevelTitleStyle" app:layout_constraintTop_toBottomOf="@+id/sign_up_email_edit_text"
                android:layout_marginTop="32dp" android:layout_marginStart="32dp"/>
        <EditText
                android:id="@+id/sign_up_password_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_password_text_view"
                style="@style/TextEditStyle" android:importantForAutofill="no"
                android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>
        <TextView
                android:id="@+id/sign_up_repeat_password_text_view"
                android:text="@string/sign_up_password_repeat_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/MiddleLevelTitleStyle"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_password_edit_text"
                android:layout_marginTop="32dp" android:layout_marginStart="32dp"/>
        <EditText
                android:id="@+id/sign_up_repeat_password_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                style="@style/TextEditStyle" android:importantForAutofill="no"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_repeat_password_text_view"
                android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>
        <Button
                android:id="@+id/sign_up_button"
                android:text="@string/sign_up_title"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                style="@style/ButtonStyle"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_repeat_password_edit_text"
                android:layout_marginTop="32dp" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>
        <TextView
                android:id="@+id/sign_up_already_registered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_button" app:layout_constraintStart_toStartOf="parent"
                android:text="@string/sign_up_already_registered"
                style="@style/LowLevelTitleStyle" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="32dp" android:layout_marginBottom="32dp" android:layout_marginStart="32dp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/sign_up_name_edit_text"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_name_text_view" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                style="@style/TextEditStyle"/>
        <TextView
                android:text="@string/sign_up_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/sign_up_name_text_view"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_title"
                android:layout_marginTop="32dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                style="@style/MiddleLevelTitleStyle"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>