<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/backgroundColor"
                                                   tools:context=".mvp.presentation.reset_password.NewPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/app_background"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <TextView
                android:id="@+id/new_password_title"
                android:text="@string/new_password_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/TopLevelTitleStyle"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="32dp" android:layout_marginStart="32dp"/>

        <TextView
                android:id="@+id/new_password_text_view"
                android:text="@string/sign_up_password_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/MiddleLevelTitleStyle" app:layout_constraintTop_toBottomOf="@+id/new_password_title"
                android:layout_marginTop="32dp" android:layout_marginStart="32dp"/>
        <EditText
                android:id="@+id/new_password_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_password_text_view"
                style="@style/TextEditStyle" android:importantForAutofill="no"
                android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>
        <TextView
                android:id="@+id/repeat_new_password_text_view"
                android:text="@string/sign_up_password_repeat_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/MiddleLevelTitleStyle"
                app:layout_constraintTop_toBottomOf="@+id/new_password_edit_text"
                android:layout_marginTop="32dp" android:layout_marginStart="32dp"/>
        <EditText
                android:id="@+id/repeat_new_password_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                style="@style/TextEditStyle" android:importantForAutofill="no"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/repeat_new_password_text_view"
                android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>

        <Button
                android:id="@+id/new_password_button"
                android:text="@string/new_password_button_title"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                style="@style/ButtonStyle"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/repeat_new_password_edit_text"
                android:layout_marginTop="32dp" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>